--- a/style.css
+++ b/style.css
@@ -63,6 +63,7 @@ header .navbar a {
     color: var(--black);
 }
 
+header .navbar a.active,
 header .navbar a:hover {
     color: #fff;
     background: var(--menu);
@@ -449,24 +450,120 @@ section:nth-child(even) {
 
 }
 
+.Order form {
+    max-width: 90rem;
+    border-radius: .5rem;
+    box-shadow: var(--box-shadow);
+    border: .1rem solid rgb(0, 0, 0,.2);
+    background: #fff;
+    padding: 1.5rem;
+    margin: 0 auto;
+}
 
+.Order form .inputBox {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
 
+.Order form .inputBox .input {
+    width: 50%;
+}
 
+.Order form .inputBox .input span {
+    display: block;
+    padding: .5rem 0;
+    font-size: 1.5rem;
+    color: var(--light-color);
+}
 
+.Order form .inputBox .input input,
+.Order form .inputBox .input textarea {
+    background: #eee;
+    border-radius: .5rem;
+    padding: 1rem;
+    font-size: 1.6rem;
+    color: var(--black);
+    text-transform: none;
+    margin-bottom: 1rem;
+    width: 95%;
+}
 
+.Order form .inputBox .input input:focus,
+.Order form .inputBox .input textarea:focus {
+    border: .1rem solid var(--green);
+}
 
+.Order form .inputBox .input textarea {
+    height: 20rem;
+    /* textarea사이즈 변경 못하게 resize설정 해야 함 */
+    resize: none;
+}
 
+.Order form .btn {
+    margin-top: 0;
+}
 
+.Footer .box-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+    gap: 1.5rem;
+}
 
+.Footer .box-container .box {
+    padding: .5rem 0;
+    font-size: 2.5rem;
+    color: var(--black);
+}
 
+.Footer .box-container .box a{
+    display: block;
+    padding: .5rem 0;
+    font-size: 1.5rem;
+    color: var(--light-color);
+}
 
+.Footer .box-container .box a:hover{
+    color: var(--green);
+    text-decoration: underline;
+}
 
+.Footer .credit {
+    text-align: center;
+    border-top: .1rem solid rgb(0, 0, 0,.1);
+    font-size: 2rem;
+    color: var(--black);
+    padding: .5rem;
+    padding-top: 1.5rem;
+    margin-top: 1.5rem;
+}
 
+.Footer .credit span {
+    color: var(--green);
+}
 
+.loader-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    z-index: 10000;
+    background: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+}
 
+.loader-container img {
+    width: 35rem;
+}
 
-
-
+.loader-container .fade-out {
+    top: 110%;
+    opacity: 0;
+}
 
 
 
@@ -550,14 +647,18 @@ section:nth-child(even) {
     }
 }
 
-@media(max-width: 991px) {
+@media(max-width: 450px) {
 
     html {
         font-size: 50%;
     }
 
     .Recipe .box-container .box img {
-        height: 17rem;
-        margin: 1rem 0;
+        height: auto;
+        width: 100%;
+    }
+
+    .Order form .inputBox .input {
+        width: 100%;
     }
 }
